--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "knex": "^0.16.5",
     "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
-    "pg": "^7.10.0"
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
