--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "knex": "^0.16.5",
     "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
