--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
-    "passport-github": "^1.1.0"
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.11"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
